# snes_input_display

./: .gitignore  Cargo.toml  QUsb2Snes.py  README.md  main.py  requirements.txt
.github/workflows/: build.yaml  checks.yml  release.yaml  release.yml
confs/: 3NKB.json  ALTTP.json  AndreAgassiTennis.json  Defaults.json  Ninja Gaiden Trilogy.json  SMW.json  SuperCastleveniaIV.json  SuperMetroid.json  YoshisIsland.json  settings.toml
src/: configuration.rs  controller.rs  controllers.rs  main copy.bk.old  main copy.rs  main.rs  qusb2snes.rs  skin.rs  skins.rs
