[package]
name = "snes_input_display"
version = "0.2.1"
edition = "2021"
license = " GPL-3.0-or-later"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tungstenite = "0.20"
bitvec = "1"
quick-xml = { version = "0.30", features = ["overlapped-lists", "serialize"] }
config = "0.13"
dirs = "5"
ggez = "0.9"
rusb2snes = "0.1"