[package]
name = "snes_input_display"
version = "0.2.3"
edition = "2021"
license = " GPL-3.0-or-later"

[profile.release]
codegen-units = 1 # Improves code generation at the cost of increased compile time.
strip = true      # Automatically strip symbols from the binary.
lto = true

[dependencies]
walkdir = "2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tungstenite = "0.21"
quick-xml = { version = "0.31", features = ["overlapped-lists", "serialize"] }
dirs = "5"
ggez = "0.9"
rusb2snes = "0.1"
toml = "0.8"
